src/objects/CST_User_Log_CUST__c.object
<CustomObject>
    <description>Stores the user access logs for the non-GSO CST UI : MERC, CUST : Created on 02/28/2014 by Sean Harrison, Mavens Consulting</description>
    <fields>
        <fullName>Prsnl_Nbr_GLBL__c</fullName>
        <description>Stores the User&apos;s Lilly Employee Global ID</description>
        <inlineHelpText>Stores the User&apos;s Lilly Employee Global ID</inlineHelpText>
        <label>Global ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Language_CUST__c</fullName>
        <description>The Language that the user selected</description>
        <label>Term Language</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Accepted_CUST__c</fullName>
        <description>The Terms and conditions accepted by the user</description>
        <label>Terms Accepted</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_Accessed_CUST__c</fullName>
        <description>The time a user accessed the CST</description>
        <label>Time Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Account_CUST__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Users Account in Mercury</description>
        <label>User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CST User Logs</relationshipLabel>
        <relationshipName>CST_User_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CST User Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_Accessed_CUST__c</columns>
        <columns>Term_Language_CUST__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}:{MM}:{DD}-{0}</displayFormat>
        <label>CST User Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CST User Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>